--- a/Lab7_Tables/Lab7_Tables/Lab7_Tables.vcxproj.filters
+++ b/Lab7_Tables/Lab7_Tables/Lab7_Tables.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="TArrayTable.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="TScanTable.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
