--- a/Lab7_Tables/Lab7_Tables/Lab7_Tables.vcxproj.filters
+++ b/Lab7_Tables/Lab7_Tables/Lab7_Tables.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="TScanTable.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ShoesTable.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="CSVConverter.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
