Sort table base

--- a/Lab7_Tables/Lab7_Tables/Lab7_Tables.vcxproj
+++ b/Lab7_Tables/Lab7_Tables/Lab7_Tables.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="TDataCom.h" />
     <ClInclude Include="TDatValue.h" />
     <ClInclude Include="TScanTable.h" />
+    <ClInclude Include="TSortTable.h" />
     <ClInclude Include="TTable.h" />
     <ClInclude Include="TTabRecord.h" />
   </ItemGroup>
