--- a/Lab7_Tables/Lab7_Tables/Lab7_Tables.vcxproj.filters
+++ b/Lab7_Tables/Lab7_Tables/Lab7_Tables.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="CSVConverter.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="TSortTable.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
